v0.0.1/modules/schema/pages/class/ExcHU.adoc
= `ExcHU`
:toclevels: 4


+++Hungarian excitation system, with built-in voltage transducer.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ExcHU`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
**** *`ExcHU`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ExcHU {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}























SynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PowerSystemStabilizerDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PFVArControllerType1Dynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



OverexcitationLimiterDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiscontinuousExcitationControlDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PFVArControllerType2Dynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



UnderexcitationLimiterDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



VoltageCompensatorDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}














ExcHU -> SynchronousMachineDynamics: SynchronousMachineDynamics


ExcHU -> PowerSystemStabilizerDynamics: PowerSystemStabilizerDynamics


ExcHU -> PFVArControllerType1Dynamics: PFVArControllerType1Dynamics


ExcHU -> OverexcitationLimiterDynamics: OverexcitationLimiterDynamics


ExcHU -> DiscontinuousExcitationControlDynamics: DiscontinuousExcitationControlDynamics


ExcHU -> PFVArControllerType2Dynamics: PFVArControllerType2Dynamics


ExcHU -> UnderexcitationLimiterDynamics: UnderexcitationLimiterDynamics


ExcHU -> VoltageCompensatorDynamics: VoltageCompensatorDynamics


ExcHU -> DiagramObject: DiagramObjects


ExcHU -> InstanceSet: InstanceSet


ExcHU -> Name: Names


ExcHU -> ChangeSetMember: PropertiesCIMDataObject


ExcHU -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 1
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this excitation system model is associated.+++

| <<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
| 1
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]
| +++Voltage compensator model associated with this excitation system model.+++

| <<ae,`ae`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Major loop PI tag gain factor (<i>Ae</i>).  Typical value = 3.+++

| <<ai,`ai`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minor loop PI tag gain factor (<i>Ai</i>).  Typical value = 22.+++

| <<atr,`atr`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++AVR constant (<i>Atr</i>).  Typical value = 2,19.+++

| <<emax,`emax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Field voltage control signal upper limit on AVR base (<i>Emax</i>) (&gt; ExcHU.emin).  Typical value = 0,996.+++

| <<emin,`emin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Field voltage control signal lower limit on AVR base (<i>Emin</i>) (&lt; ExcHU.emax).  Typical value = -0,866.+++

| <<imax,`imax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Major loop PI tag output signal upper limit (<i>Imax</i>) (&gt; ExcHU.imin).  Typical value = 2,19.+++

| <<imin,`imin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Major loop PI tag output signal lower limit (<i>Imin</i>) (&lt; ExcHU.imax).  Typical value = 0,1.+++

| <<ke,`ke`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Voltage base conversion constant (<i>Ke</i>).  Typical value = 4,666.+++

| <<ki,`ki`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Current base conversion constant (<i>Ki</i>).  Typical value = 0,21428.+++

| <<te,`te`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Major loop PI tag integration time constant (<i>Te</i>) (&gt;= 0).  Typical value = 0,154.+++

| <<ti,`ti`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Minor loop PI control tag integration time constant (<i>Ti</i>) (&gt;= 0).  Typical value = 0,01333.+++

| <<tr,`tr`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Filter time constant (<i>Tr</i>) (&gt;= 0). If a voltage compensator is used in conjunction with this excitation system model, <i>Tr </i>should be set to 0.  Typical value = 0,01.+++

| <<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
| 0..1
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]
| +++Discontinuous excitation control model associated with this excitation system model.+++

| <<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
| 0..1
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]
| +++Overexcitation limiter model associated with this excitation system model.+++

| <<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
| 0..1
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]
| +++Power factor or VAr controller type 1 model associated with this excitation system model.+++

| <<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
| 0..1
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]
| +++Power factor or VAr controller type 2 model associated with this excitation system model.+++

| <<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
| 0..1
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
| +++Power system stabilizer model associated with this excitation system model.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
| 0..1
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]
| +++Undrexcitation limiter model associated with this excitation system model.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#ae]
=== `ae`
+++Major loop PI tag gain factor (<i>Ae</i>).  Typical value = 3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.ae`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ai]
=== `ai`
+++Minor loop PI tag gain factor (<i>Ai</i>).  Typical value = 22.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.ai`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#atr]
=== `atr`
+++AVR constant (<i>Atr</i>).  Typical value = 2,19.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.atr`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiscontinuousExcitationControlDynamics]
=== `DiscontinuousExcitationControlDynamics`
+++Discontinuous excitation control model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.DiscontinuousExcitationControlDynamics`
| Cardinality
| 0..1
| Type
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#emax]
=== `emax`
+++Field voltage control signal upper limit on AVR base (<i>Emax</i>) (&gt; ExcHU.emin).  Typical value = 0,996.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.emax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#emin]
=== `emin`
+++Field voltage control signal lower limit on AVR base (<i>Emin</i>) (&lt; ExcHU.emax).  Typical value = -0,866.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.emin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#imax]
=== `imax`
+++Major loop PI tag output signal upper limit (<i>Imax</i>) (&gt; ExcHU.imin).  Typical value = 2,19.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.imax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#imin]
=== `imin`
+++Major loop PI tag output signal lower limit (<i>Imin</i>) (&lt; ExcHU.imax).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.imin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ke]
=== `ke`
+++Voltage base conversion constant (<i>Ke</i>).  Typical value = 4,666.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.ke`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#ki]
=== `ki`
+++Current base conversion constant (<i>Ki</i>).  Typical value = 0,21428.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.ki`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#OverexcitationLimiterDynamics]
=== `OverexcitationLimiterDynamics`
+++Overexcitation limiter model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.OverexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PFVArControllerType1Dynamics]
=== `PFVArControllerType1Dynamics`
+++Power factor or VAr controller type 1 model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType1Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PFVArControllerType2Dynamics]
=== `PFVArControllerType2Dynamics`
+++Power factor or VAr controller type 2 model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType2Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PowerSystemStabilizerDynamics]
=== `PowerSystemStabilizerDynamics`
+++Power system stabilizer model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PowerSystemStabilizerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this excitation system model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.SynchronousMachineDynamics`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#te]
=== `te`
+++Major loop PI tag integration time constant (<i>Te</i>) (&gt;= 0).  Typical value = 0,154.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.te`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ti]
=== `ti`
+++Minor loop PI control tag integration time constant (<i>Ti</i>) (&gt;= 0).  Typical value = 0,01333.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.ti`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tr]
=== `tr`
+++Filter time constant (<i>Tr</i>) (&gt;= 0). If a voltage compensator is used in conjunction with this excitation system model, <i>Tr </i>should be set to 0.  Typical value = 0,01.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.tr`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#UnderexcitationLimiterDynamics]
=== `UnderexcitationLimiterDynamics`
+++Undrexcitation limiter model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.UnderexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

//[discrete]
[#VoltageCompensatorDynamics]
=== `VoltageCompensatorDynamics`
+++Voltage compensator model associated with this excitation system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.VoltageCompensatorDynamics`
| Cardinality
| 1
| Type
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===


