v1.1.0/modules/schema/pages/class/ExcHU.adoc
= `ExcHU`
:toclevels: 4


+++Hungarian excitation system, with built-in voltage transducer.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ExcHU`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
**** *`ExcHU`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<ae,`ae`>>
//| [[slots_table.ae]]<<ae,`ae`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Major loop PI tag gain factor (<i>Ae</i>).  Typical value = 3.+++
| _n/a_

| <<ai,`ai`>>
//| [[slots_table.ai]]<<ai,`ai`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minor loop PI tag gain factor (<i>Ai</i>).  Typical value = 22.+++
| _n/a_

| <<atr,`atr`>>
//| [[slots_table.atr]]<<atr,`atr`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++AVR constant (<i>Atr</i>).  Typical value = 2,19.+++
| _n/a_

| <<emax,`emax`>>
//| [[slots_table.emax]]<<emax,`emax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Field voltage control signal upper limit on AVR base (<i>Emax</i>) (&gt; ExcHU.emin).  Typical value = 0,996.+++
| _n/a_

| <<emin,`emin`>>
//| [[slots_table.emin]]<<emin,`emin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Field voltage control signal lower limit on AVR base (<i>Emin</i>) (&lt; ExcHU.emax).  Typical value = -0,866.+++
| _n/a_

| <<imax,`imax`>>
//| [[slots_table.imax]]<<imax,`imax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Major loop PI tag output signal upper limit (<i>Imax</i>) (&gt; ExcHU.imin).  Typical value = 2,19.+++
| _n/a_

| <<imin,`imin`>>
//| [[slots_table.imin]]<<imin,`imin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Major loop PI tag output signal lower limit (<i>Imin</i>) (&lt; ExcHU.imax).  Typical value = 0,1.+++
| _n/a_

| <<ke,`ke`>>
//| [[slots_table.ke]]<<ke,`ke`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Voltage base conversion constant (<i>Ke</i>).  Typical value = 4,666.+++
| _n/a_

| <<ki,`ki`>>
//| [[slots_table.ki]]<<ki,`ki`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Current base conversion constant (<i>Ki</i>).  Typical value = 0,21428.+++
| _n/a_

| <<te,`te`>>
//| [[slots_table.te]]<<te,`te`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Major loop PI tag integration time constant (<i>Te</i>) (&gt;= 0).  Typical value = 0,154.+++
| _n/a_

| <<ti,`ti`>>
//| [[slots_table.ti]]<<ti,`ti`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Minor loop PI control tag integration time constant (<i>Ti</i>) (&gt;= 0).  Typical value = 0,01333.+++
| _n/a_

| <<tr,`tr`>>
//| [[slots_table.tr]]<<tr,`tr`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Filter time constant (<i>Tr</i>) (&gt;= 0). If a voltage compensator is used in conjunction with this excitation system...+++
| _n/a_

| <<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
//| [[slots_table.DiscontinuousExcitationControlDynamics]]<<DiscontinuousExcitationControlDynamics,`DiscontinuousExcitationControlDynamics`>>
| 0..1 +
xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]
| +++Discontinuous excitation control model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
//| [[slots_table.OverexcitationLimiterDynamics]]<<OverexcitationLimiterDynamics,`OverexcitationLimiterDynamics`>>
| 0..1 +
xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]
| +++Overexcitation limiter model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
//| [[slots_table.PFVArControllerType1Dynamics]]<<PFVArControllerType1Dynamics,`PFVArControllerType1Dynamics`>>
| 0..1 +
xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]
| +++Power factor or VAr controller type 1 model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
//| [[slots_table.PFVArControllerType2Dynamics]]<<PFVArControllerType2Dynamics,`PFVArControllerType2Dynamics`>>
| 0..1 +
xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]
| +++Power factor or VAr controller type 2 model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
//| [[slots_table.PowerSystemStabilizerDynamics]]<<PowerSystemStabilizerDynamics,`PowerSystemStabilizerDynamics`>>
| 0..1 +
xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
| +++Power system stabilizer model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this excitation system model is associated.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
//| [[slots_table.UnderexcitationLimiterDynamics]]<<UnderexcitationLimiterDynamics,`UnderexcitationLimiterDynamics`>>
| 0..1 +
xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]
| +++Undrexcitation limiter model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
//| [[slots_table.VoltageCompensatorDynamics]]<<VoltageCompensatorDynamics,`VoltageCompensatorDynamics`>>
| 1 +
xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]
| +++Voltage compensator model associated with this excitation system model.+++
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#ae]
=== `ae`
+++Major loop PI tag gain factor (<i>Ae</i>).  Typical value = 3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.ae`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ae,&#10548;>>
--
////


//[discrete]
[#ai]
=== `ai`
+++Minor loop PI tag gain factor (<i>Ai</i>).  Typical value = 22.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.ai`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ai,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#atr]
=== `atr`
+++AVR constant (<i>Atr</i>).  Typical value = 2,19.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.atr`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.atr,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#DiscontinuousExcitationControlDynamics]
=== `DiscontinuousExcitationControlDynamics`
+++Discontinuous excitation control model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.DiscontinuousExcitationControlDynamics`
| Cardinality
| 0..1
| Type
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.DiscontinuousExcitationControlDynamics,&#10548;>>
--
////


//[discrete]
[#emax]
=== `emax`
+++Field voltage control signal upper limit on AVR base (<i>Emax</i>) (&gt; ExcHU.emin).  Typical value = 0,996.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.emax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.emax,&#10548;>>
--
////


//[discrete]
[#emin]
=== `emin`
+++Field voltage control signal lower limit on AVR base (<i>Emin</i>) (&lt; ExcHU.emax).  Typical value = -0,866.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.emin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.emin,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#imax]
=== `imax`
+++Major loop PI tag output signal upper limit (<i>Imax</i>) (&gt; ExcHU.imin).  Typical value = 2,19.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.imax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.imax,&#10548;>>
--
////


//[discrete]
[#imin]
=== `imin`
+++Major loop PI tag output signal lower limit (<i>Imin</i>) (&lt; ExcHU.imax).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.imin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.imin,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#ke]
=== `ke`
+++Voltage base conversion constant (<i>Ke</i>).  Typical value = 4,666.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.ke`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.ke,&#10548;>>
--
////


//[discrete]
[#ki]
=== `ki`
+++Current base conversion constant (<i>Ki</i>).  Typical value = 0,21428.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.ki`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.ki,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#OverexcitationLimiterDynamics]
=== `OverexcitationLimiterDynamics`
+++Overexcitation limiter model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.OverexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/OverexcitationLimiterDynamics.adoc[`OverexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.OverexcitationLimiterDynamics,&#10548;>>
--
////


//[discrete]
[#PFVArControllerType1Dynamics]
=== `PFVArControllerType1Dynamics`
+++Power factor or VAr controller type 1 model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType1Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType1Dynamics.adoc[`PFVArControllerType1Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PFVArControllerType1Dynamics,&#10548;>>
--
////


//[discrete]
[#PFVArControllerType2Dynamics]
=== `PFVArControllerType2Dynamics`
+++Power factor or VAr controller type 2 model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PFVArControllerType2Dynamics`
| Cardinality
| 0..1
| Type
| xref::class/PFVArControllerType2Dynamics.adoc[`PFVArControllerType2Dynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PFVArControllerType2Dynamics,&#10548;>>
--
////


//[discrete]
[#PowerSystemStabilizerDynamics]
=== `PowerSystemStabilizerDynamics`
+++Power system stabilizer model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.PowerSystemStabilizerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.PowerSystemStabilizerDynamics,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this excitation system model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.SynchronousMachineDynamics`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#te]
=== `te`
+++Major loop PI tag integration time constant (<i>Te</i>) (&gt;= 0).  Typical value = 0,154.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.te`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.te,&#10548;>>
--
////


//[discrete]
[#ti]
=== `ti`
+++Minor loop PI control tag integration time constant (<i>Ti</i>) (&gt;= 0).  Typical value = 0,01333.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.ti`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ti,&#10548;>>
--
////


//[discrete]
[#tr]
=== `tr`
+++Filter time constant (<i>Tr</i>) (&gt;= 0). If a voltage compensator is used in conjunction with this excitation system model, <i>Tr </i>should be set to 0.  Typical value = 0,01.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcHU.tr`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tr,&#10548;>>
--
////


//[discrete]
[#UnderexcitationLimiterDynamics]
=== `UnderexcitationLimiterDynamics`
+++Undrexcitation limiter model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.UnderexcitationLimiterDynamics`
| Cardinality
| 0..1
| Type
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.UnderexcitationLimiterDynamics,&#10548;>>
--
////


//[discrete]
[#VoltageCompensatorDynamics]
=== `VoltageCompensatorDynamics`
+++Voltage compensator model associated with this excitation system model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ExcitationSystemDynamics.VoltageCompensatorDynamics`
| Cardinality
| 1
| Type
| xref::class/VoltageCompensatorDynamics.adoc[`VoltageCompensatorDynamics`]

| Inherited from
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]


|===

////
[.text-left]
--
<<slots_table.VoltageCompensatorDynamics,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
